# SRXDModManager

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
installer/: Cargo.toml  build.rs
installer/locales/: en.toml
installer/src/: app.rs  gui.rs  main.rs  patch.rs
installer/src/assets/: icon.rgba  icon_2.rgba
model/: Cargo.toml
model/src/: lib.rs
server/: .gitignore  Cargo.toml
server/assets/: template.json
server/mods/: manifest.json  template.toml
server/src/: main.rs  template.rs
server/src/providers/: forgejo.rs  github.rs  mod.rs
