#:tombi schema.strict = false

[workspace]
resolver = "3"
members = ["installer", "model", "server"]

# Optimize for size
[profile.installer]
inherits = "release"
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.server]
inherits = "release"
opt-level = 3
lto = "thin"
