[package]
name = "installer"
version = "1.0.0"
edition = "2024"
build = "build.rs"
default-run = "SRXDManager"

[package.metadata.winresource]
ProductName = "SRXDManager"
FileDescription = "SRXD Mod Manager"
ProductVersion = "0.1.0"
Comments = "Created by bacur.xyz"

[[bin]]
name = "SRXDManager"
path = "src/main.rs"

[dependencies]
configparser = "3.1.0"
eframe = { version = "0.33.3", default-features = false, features = [
  "glow",
  "persistence"
] }
flume = "0.12.0"
model = { path = "../model" }
natord = "1.0.9"
open = "5.3.5"
parking_lot = "0.12.5"
reqwest = { version = "0.13.1", default-features = false, features = [
  "http2",
  "native-tls"
] }
rust-i18n = "4.1.0"
serde_json = "1.0.150"
steamlocate = "2.0.1"
tokio = { version = "1.52.3", default-features = false, features = [
  "fs",
  "macros",
  "rt-multi-thread"
] }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
  "glow",
  "persistence",
  "wayland",
  "x11"
] }
openssl = { version = "0.10", features = ["vendored"] }
regashii = "0.4.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
